# kados-ng

./: .gitignore  Cargo.toml  README.md  boot.txt  chainload.py  clippy.py  config.txt  limine.conf  rust-toolchain.toml  send.py
.cargo/: config.toml
.github/: copilot-instructions.md
arch/aarch64/: .gitignore  aarch64-kados.json  linker.ld
arch/x86_64/: x86_64-kados.json
crates/arch/: Cargo.toml
crates/arch/src/: lib.rs
crates/arch/src/aarch64/: boot.S  logging.rs  mod.rs  serial.rs
crates/bootloader/: Cargo.toml  build.rs
crates/bootloader/src/: lib.rs
crates/bootloader/src/arch/aarch64/: linker.ld
crates/chainloader/: Cargo.toml
crates/chainloader/src/: main.rs  serial.rs  start.S
crates/chainloader/src/arch/aarch64/: linker.ld
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: cpu_local.rs  dtb.rs  fdt.rs  framebuffer.rs  irq.rs  logging.rs  main.rs  panicking.rs  serial.rs  sync.rs  testing.rs  time.rs
crates/kernel/src/arch/: driver.rs  mod.rs  vectors.rs
crates/kernel/src/arch/aarch64/: boot.S  boot.rs  debugging.rs  gic.rs  gpu.rs  linker.ld  logging.rs  mmio.rs  mod.rs  random.rs  serial.rs  task.rs  time.rs  vectors.rs
crates/kernel/src/arch/aarch64/drivers/: mmio.rs  mod.rs  pcie.rs  usb.rs
crates/kernel/src/arch/aarch64/drivers/gpu/: mod.rs  props.rs
crates/kernel/src/arch/aarch64/gpu/: mod.rs  props.rs
crates/kernel/src/arch/aarch64/mem/: mod.rs
crates/kernel/src/arch/x86_64/: gdt.rs  idt.rs  linker.ld  mod.rs  serial.rs  time.rs
crates/kernel/src/mem/: heap.rs  mod.rs  units.rs
crates/kernel/src/mem/paging/: allocator.rs  flush.rs  mapper.rs  mod.rs  table.rs
crates/kernel/src/mmu/: heap.rs  mod.rs  units.rs
crates/kernel/src/syscall/: errno.rs
crates/kernel/src/task/: addr_space.rs  context.rs  mod.rs  stack.rs  switch.rs
crates/kernel/src/util/: mod.rs
tools/builder/: Cargo.toml
tools/builder/src/: main.rs
tools/loader/: Cargo.toml
tools/loader/src/: client.rs  main.rs  server.rs
xtask/: Cargo.toml
xtask/.cargo/: config.toml
xtask/src/: boot.cmd  main.rs
