cargo-features = ["per-package-target"]

[package]
edition = "2024"
forced-target = "x86_64-unknown-linux-gnu"
name = "xtask"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5", features = ["derive"]}
env_logger = "0.11.8"
log = "0.4.27"
num_cpus = "1.16.0"
xshell = "0.2.7"
