[package]
edition = "2024"
name = "kernel"
version = "0.1.0"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
buddy_system_allocator = "0.11.0"
chrono-light = { version = "0.1.5", default-features = false }
derive_more = {version = "2.0.1", default-features = false, features = ["full"]}
limine = "0.4.0"
log = "0.4.27"
qemu-exit = "3.0"
rand = {version = "0.9.1", default-features = false, features = []}
rand_chacha = {version = "0.9.0", default-features = false}
spin = "0.10.0"
thiserror = {version = "2.0.12", default-features = false}
uuid = {version = "1.16.0", default-features = false, features = ["v8"]}

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0.0"
arm_pl011 = "0.1"
