[package]
edition = "2024"
name = "kernel"
version = "0.1.0"

[[bin]]
bench = false
name = "kernel"
path = "src/main.rs"
test = false

[dependencies]
buddy_system_allocator = "0.11.0"
derive_more = {version = "2.0.1", default-features = false, features = ["full"]}
embedded-graphics = "0.8.1"
limine = "0.4.0"
log = {version = "0.4"}
qemu-exit = "3.0"
rand = {version = "0.9.1", default-features = false, features = []}
rand_chacha = {version = "0.9.0", default-features = false}
rustc-demangle = {version = "0.1.24", features = []}
spin = "0.10.0"
spinning_top = {version = "0.3.0", features = ["arc_lock"]}
thiserror = {version = "2.0.12", default-features = false}
tock-registers = "0.9.0"
uuid = {version = "1.16.0", default-features = false, features = ["v8"]}
xmas-elf = "0.10.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0.0"
arm_pl011 = "0.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
pic8259 = "0.11.0"
uart_16550 = "0.3.2"
x86 = "0.52.0"
x86_64 = "0.15.2"
