[package]
edition = "2024"
name = "kernel"
version = "0.1.0"

[[bin]]
bench = false
name = "kernel"
path = "src/main.rs"
test = false

[dependencies]
arrayvec = {version = "*", default-features = false}
bitflags = "2.9.0"
bitvec = {version = "1.0", default-features = false}
buddy_system_allocator = "0.11.0"
derive_more = {version = "2.0.1", default-features = false, features = ["full"]}
embedded-graphics = "0.8.1"
fdt = {git = "https://github.com/repnop/fdt.git", features = ["pretty-printing"]}
log = {version = "0.4"}
qemu-exit = "3.0"
rustc-demangle = {version = "0.1.24", features = []}
spin = "0.10.0"
spinning_top = {version = "0.3.0", features = ["arc_lock"]}
thiserror = {version = "2.0.12", default-features = false}

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0.0"
