[package]
edition = "2024"
name = "loader"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0.98", features = ["backtrace"]}
clap = {version = "4.5.38", features = ["derive"]}
derive_more = {version = "2.0.1", features = ["full"]}
env_logger = "0.11.8"
indicatif = "0.17.11"
log = "0.4.27"
tokio = {version = "1.45.0", features = ["full"]}
tokio-serial = "5.4.5"
xmas-elf = "0.10.0"
